<resources>
    <string name="app_name">MC-Tracking V1.3.2</string>
    <string name="textview">TextView</string>

    <string name="accelerationX">X_加速度</string>
    <string name="accelerationY">Y_加速度</string>
    <string name="accelerationZ">Z_加速度</string>

    <string name="gyroscopeX">X_角速度</string>
    <string name="gyroscopeY">Y_角速度</string>
    <string name="gyroscopeZ">Z_角速度</string>

    <string name="orientationX">X_倾斜角</string>
    <string name="orientationY">Y_倾斜角</string>
    <string name="orientationZ">Z_倾斜角</string>

    <string name="startRecord">开始记录运动数据</string>
    <string name="stopRecord">停止记录运动数据</string>

    <string name="uploadFile">主动上传数据</string>
    <string name="add_record">添加记录</string>
    <string name="delete_record">删除记录</string>

</resources>